--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<img src="logo.webp" alt="Logo" class="logo">
 		<nav>
 			<ul>
-				<li><a href="index.html">HOME</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="index2.html">Quem somos</a></li>
 				<li><a href="index3.html">Pedido</a></li>
 				<li><a href="index4.html">Cadastro</a></li>
@@ -31,7 +31,7 @@
 </script>
 
 
-		<button class="search-btn" onclick="mostrar_produto()">Busca</button>
+		<button class="search-btn" onclick="mostrar_produto()">Pedir</button>
 
 		<script>
 			function mostrar_produto() {
